# A1-QP-MPC-Controller

./: .gitignore  README.md
docker/: Dockerfile
docker_noetic_focal/: Dockerfile  test.txt
gazebo_docker/: Dockerfile  run_gazebo_docker.bash
src/a1_cpp/: CMakeLists.txt  package.xml
src/a1_cpp/config/: gazebo_a1_mpc.yaml  gazebo_a1_qp.yaml  hardware_a1_mpc.yaml  hardware_a1_qp.yaml  isaac_a1_mpc.yaml  isaac_a1_qp.yaml
src/a1_cpp/launch/: a1_ctrl.launch
src/a1_cpp/src/: A1BasicEKF.cpp  A1BasicEKF.h  A1CtrlStates.h  A1Params.h  A1RobotControl.cpp  A1RobotControl.h  ConvexMpc.cpp  ConvexMpc.h  GazeboA1ROS.cpp  GazeboA1ROS.h  HardwareA1ROS.cpp  HardwareA1ROS.h  IsaacA1ROS.cpp  IsaacA1ROS.h  MainGazebo.cpp  MainHardware.cpp  MainIsaac.cpp
src/a1_cpp/src/beizer/: .travis.yml  README.md
src/a1_cpp/src/beizer/tests/: CMakeLists.txt  assert.h  basic-tests.cpp  derivative-tests.cpp  test_beziers.h
src/a1_cpp/src/legKinematics/: A1Kinematics.cpp  A1Kinematics.h  README.md
src/a1_cpp/src/test/: test_bezier.cpp  test_mpc.cpp  test_rotation.cpp  test_spline.cpp  test_unitree_msgs.cpp
src/a1_cpp/src/utils/: Utils.cpp  Utils.h  filter.hpp  spline.h
